--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <a href="">link-1</a><a href="">link-2</a><a href="">link-3</a><a href="">link-4</a>
 </body>
 </html>
-
