--- a/index.html
+++ b/index.html
@@ -7,6 +7,53 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="">link-1</a><a href="">link-2</a><a href="">link-3</a><a href="">link-4</a>
-</body>
+    <header>
+        <nav>
+            <a href="">link-1</a><a href="">link-2</a><a href="">link-3</a><a href="">link-4</a>
+        </nav>
+        <h1>Welcome to my Website</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi officiis non voluptatibus ex sint, debitis harum? Officia quo a repellat? Voluptates tempora velit, aperiam ipsum quidem non ad quam natus!</p>
+        <p>Distinctio numquam itaque laboriosam velit cupiditate tempore deleniti. Sunt tempore quae reprehenderit facilis porro officiis deserunt minus quia. Nam minima mollitia optio fuga voluptas impedit delectus, est reiciendis incidunt voluptatibus!</p>
+        <p>Culpa voluptatibus iure alias voluptas! Nulla vero illo perferendis eligendi modi pariatur sapiente rem incidunt reprehenderit recusandae ea debitis iure alias harum sequi quisquam deleniti quos, tempora, reiciendis inventore officia?</p>
+        <p>Neque, rem aliquam, suscipit architecto, enim repellendus excepturi sapiente quos iure impedit corporis aut accusamus non officiis consequuntur est obcaecati itaque autem fugiat alias sit. Similique asperiores eligendi exercitationem possimus?</p>
+    </header>
+    <main>
+        <section>
+            <h2>Read My Blogs</h2>
+            <article class="blog-1">
+                <h2>my blog-1</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quas modi minus sapiente cupiditate, unde quidem adipisci eius voluptate nisi earum distinctio, nulla molestiae vel alias placeat tempora error recusandae.</p>
+                <h2>my blog-2</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quas modi minus sapiente cupiditate, unde quidem adipisci eius voluptate nisi earum distinctio, nulla molestiae vel alias placeat tempora error recusandae.</p>
+                <h2>my blog-3</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quas modi minus sapiente cupiditate, unde quidem adipisci eius voluptate nisi earum distinctio, nulla molestiae vel alias placeat tempora error recusandae.</p>
+                <h2>my blog-4</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quas modi minus sapiente cupiditate, unde quidem adipisci eius voluptate nisi earum distinctio, nulla molestiae vel alias placeat tempora error recusandae.</p>
+            </article>
+            <article class="blog-2">
+                <h2>my blog-1</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quas modi minus sapiente cupiditate, unde quidem adipisci eius voluptate nisi earum distinctio, nulla molestiae vel alias placeat tempora error recusandae.</p>
+                <h2>my blog-2</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quas modi minus sapiente cupiditate, unde quidem adipisci eius voluptate nisi earum distinctio, nulla molestiae vel alias placeat tempora error recusandae.</p>
+                <h2>my blog-3</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quas modi minus sapiente cupiditate, unde quidem adipisci eius voluptate nisi earum distinctio, nulla molestiae vel alias placeat tempora error recusandae.</p>
+                <h2>my blog-4</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quas modi minus sapiente cupiditate, unde quidem adipisci eius voluptate nisi earum distinctio, nulla molestiae vel alias placeat tempora error recusandae.</p>
+            </article>
+            <article class="blog-3">
+                <h2>my blog-1</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quas modi minus sapiente cupiditate, unde quidem adipisci eius voluptate nisi earum distinctio, nulla molestiae vel alias placeat tempora error recusandae.</p>
+                <h2>my blog-2</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quas modi minus sapiente cupiditate, unde quidem adipisci eius voluptate nisi earum distinctio, nulla molestiae vel alias placeat tempora error recusandae.</p>
+                <h2>my blog-3</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quas modi minus sapiente cupiditate, unde quidem adipisci eius voluptate nisi earum distinctio, nulla molestiae vel alias placeat tempora error recusandae.</p>
+                <h2>my blog-4</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quas modi minus sapiente cupiditate, unde quidem adipisci eius voluptate nisi earum distinctio, nulla molestiae vel alias placeat tempora error recusandae.</p>
+            </article>
+        </section>
+        <section>
+            <article></article>
+        </section>
+    </main>
+</body> 
 </html>
